@@ -80,7 +80,7 @@ public class ConfigurationAdminImpl implements ConfigurationAdmin
 
         // FELIX-3360: new factory configuration with implicit binding is dynamic
         ConfigurationImpl config = configurationManager.createFactoryConfiguration( factoryPid, null );
-        config.setDynamicBundleLocation( this.getBundle().getLocation(), false );
+        config.setDynamicBundleLocation( Activator.getLocation(this.getBundle()), false );
         return this.wrap( config );
     }
 
@@ -122,7 +122,7 @@ public class ConfigurationAdminImpl implements ConfigurationAdmin
             config = configurationManager.createConfiguration( pid, null );
 
             // FELIX-3360: configuration creation with implicit binding is dynamic
-            config.setDynamicBundleLocation( getBundle().getLocation(), false );
+            config.setDynamicBundleLocation( Activator.getLocation(getBundle()), false );
         }
         else
         {
@@ -131,10 +131,10 @@ public class ConfigurationAdminImpl implements ConfigurationAdmin
                 Log.logger.log( LogService.LOG_DEBUG, "Binding configuration {0} (isNew: {1}) to bundle {2}",
                         new Object[]
                                 { config.getPid(), config.isNew() ? Boolean.TRUE : Boolean.FALSE,
-                                        this.getBundle().getLocation() } );
+                                    Activator.getLocation(this.getBundle()) } );
 
                 // FELIX-3360: first implicit binding is dynamic
-                config.setDynamicBundleLocation( getBundle().getLocation(), true );
+                config.setDynamicBundleLocation( Activator.getLocation(getBundle()), true );
             }
             else
             {
@@ -268,7 +268,7 @@ public class ConfigurationAdminImpl implements ConfigurationAdmin
         if ( sm != null )
         {
             // CM 1.4 / 104.11.1 Implicit permission
-            if ( name != null && ( checkOwn || !name.equals( getBundle().getLocation() ) ) )
+            if ( name != null && ( checkOwn || !name.equals( Activator.getLocation(getBundle()) ) ) )
             {
                 try
                 {
@@ -277,7 +277,7 @@ public class ConfigurationAdminImpl implements ConfigurationAdmin
                     Log.logger.log( LogService.LOG_DEBUG,
                             "Explicit Permission; grant {0} permission on configuration bound to {1} to bundle {2}",
                             new Object[]
-                                    { action, name, getBundle().getLocation() } );
+                                    { action, name, Activator.getLocation(getBundle()) } );
                 }
                 catch ( SecurityException se )
                 {
@@ -286,7 +286,7 @@ public class ConfigurationAdminImpl implements ConfigurationAdmin
                             LogService.LOG_DEBUG,
                             "No Permission; denied {0} permission on configuration bound to {1} to bundle {2}; reason: {3}",
                             new Object[]
-                                    { action, name, getBundle().getLocation(), se.getMessage() } );
+                                    { action, name, Activator.getLocation(getBundle()), se.getMessage() } );
                     throw se;
                 }
             }
@@ -295,7 +295,7 @@ public class ConfigurationAdminImpl implements ConfigurationAdmin
                 Log.logger.log( LogService.LOG_DEBUG,
                         "Implicit Permission; grant {0} permission on configuration bound to {1} to bundle {2}",
                         new Object[]
-                                { action, name, getBundle().getLocation() } );
+                                { action, name, Activator.getLocation(getBundle()) } );
 
             }
         }
@@ -304,7 +304,7 @@ public class ConfigurationAdminImpl implements ConfigurationAdmin
             Log.logger.log( LogService.LOG_DEBUG,
                     "No SecurityManager installed; grant {0} permission on configuration bound to {1} to bundle {2}",
                     new Object[]
-                            { action, name, getBundle().getLocation() } );
+                            { action, name, Activator.getLocation(getBundle()) } );
         }
     }
 
@@ -378,7 +378,7 @@ public class ConfigurationAdminImpl implements ConfigurationAdmin
             config = configurationManager.createFactoryConfiguration( pid, factoryPid, null );
 
             // FELIX-3360: configuration creation with implicit binding is dynamic
-            config.setDynamicBundleLocation( getBundle().getLocation(), false );
+            config.setDynamicBundleLocation( Activator.getLocation(getBundle()), false );
         }
         else
         {
@@ -387,10 +387,10 @@ public class ConfigurationAdminImpl implements ConfigurationAdmin
                 Log.logger.log( LogService.LOG_DEBUG, "Binding configuration {0} (isNew: {1}) to bundle {2}",
                         new Object[]
                                 { config.getPid(), config.isNew() ? Boolean.TRUE : Boolean.FALSE,
-                                        this.getBundle().getLocation() } );
+                                    Activator.getLocation(this.getBundle()) } );
 
                 // FELIX-3360: first implicit binding is dynamic
-                config.setDynamicBundleLocation( getBundle().getLocation(), true );
+                config.setDynamicBundleLocation( Activator.getLocation(getBundle()), true );
             }
             else
             {
